# MUSEgeom

./: .gitignore  .gitmodules  00_buildDeps.sh  CMakeLists.txt  README.md  build.sh  building.sh
examples/02_MontePisano/data/: dtm.asc  hsg_usda.gpkg
examples/02_MontePisano/data/UsoSuolo/: UsoSuolo.shx
examples/03_GenoaHarbour/data/unito1_2_Portovecchio/: unito1_2_Portovecchio.dbf  unito1_2_Portovecchio.shp  unito1_2_Portovecchio.shx
examples/TEST/script/: 10_test_MUSE_00_posterSTAG24.sh
examples/script/: 00_Test.sh  01_Portofino.sh  02_MontePisano.sh  03_GenoaHarbour.sh  04_Polcevera.sh  05_Section.sh
include/muselib/: colors.h  muse_inline.h  utils.cpp  utils.h
include/muselib/data_structures/: data.cpp  data.h  geometry.cpp  geometry.h  graph.cpp  graph.h  info_data.h  point.cpp  point.h  project.cpp  project.h  rotation.h  surface.cpp  surface.h  volume.cpp  volume.h
include/muselib/flag/: check.cpp  check.h  flag.cpp  flag.h  num_check.cpp  num_check.h
include/muselib/geometry/: grid_mesh.cpp  grid_mesh.h  hexmesh.cpp  hexmesh.h  merge_meshes.cpp  merge_meshes.h  mesh.cpp  mesh.h  polygon_mesh.cpp  polygon_mesh.h  surface_mesh.cpp  surface_mesh.h  tools.cpp  tools.h  volume_mesh.cpp  volume_mesh.h
include/muselib/help/: helpVolume.cpp  helpVolume.h
include/muselib/input/: load_csv.cpp  load_csv.h  load_raster.cpp  load_raster.h  load_vector.cpp  load_vector.h  load_xyz.cpp  load_xyz.h
include/muselib/interpolation/: ellipse.cpp  ellipse.h  plane.cpp  plane.h
include/muselib/metadata/: compute_meta.cpp  compute_meta.h  data_meta.cpp  data_meta.h  data_statistics.cpp  data_statistics.h  data_summary.cpp  data_summary.h  data_summary_meta.cpp  data_summary_meta.h  dependencies.cpp  dependencies.h  extraction_meta.cpp  extraction_meta.h  fitvario_methods.h  geometry_meta.cpp  geometry_meta.h  manipulate_meta.cpp  manipulate_meta.h  metadata.cpp  metadata.h  surface_meta.cpp  surface_meta.h  vario_meta.cpp  vario_meta.h  vario_methods.h  vario_multiframe.cpp  vario_multiframe.h  volume_meta.cpp  volume_meta.h
include/muselib/plot/: plots.cpp  plots.h
include/muselib/reference_system/: coordinate_systems.cpp  coordinate_systems.h
include/muselib/stratigraphic_trasformation/: coord_transf.cpp  coord_transf.h
src/: main.cpp  main_geom.cpp  main_manip.cpp
